--- a/package.json
+++ b/package.json
@@ -6,8 +6,6 @@
   },
   "devDependencies": {
     "gulp": "^3.9.1",
-    "laravel-elixir": "^6.0.0-11",
-    "laravel-elixir-vue-2": "^0.2.0",
-    "laravel-elixir-webpack-official": "^1.0.2"jj
+    "laravel-elixir": "^6.0.0-11"
   }
 }
